<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phonzie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_add_person">Add person</string>
    <string name="button_search_person">Search person</string>
    <string name="title_activity_search_person">Search Person</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="p_number">Person number:</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_p_number">Person number</string>
    <string name="button_back">Back</string>
    <string name="person_added_message">ERMAGEEEEEEEEEEEEEEEEEEEEEEEEERD</string>
    <string name="success_title">Success!</string>
    <string name="ok">Ok</string>

</resources>