<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout 
    	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/first_name" />
	    
	    <EditText android:id="@+id/search_first_name"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:inputType="text"
	        android:hint="@string/hint_first_name" />
	    
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/last_name" />
	    
	    <EditText android:id="@+id/search_last_name"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:inputType="text" 
	        android:hint="@string/hint_last_name" />
	    
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p_number" />
	    
	    <EditText android:id="@+id/search_p_number"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:inputType="number" 
	        android:hint="@string/hint_p_number"/>
	    
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    
	     <Button android:id="@+id/search_person"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_search_person"
	        android:onClick="searchPerson" />
	
	     <Button android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_back"
	        android:onClick="back" />
	     
	</LinearLayout>
</LinearLayout>